--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,17 @@ body{
     }
 }
 
-.banner-sec{background:url(../img/alpacas.jpg)  no-repeat left bottom; background-size:cover; min-height:500px; border-radius: 0 10px 10px 0; padding:0;}
+#logo{
+    width:100%;
+    text-align: center;
+}
+
+.centered{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.banner-sec{background:url(../img/alpaca.jpg)  no-repeat left bottom; background-size:cover; min-height:500px; border-radius: 0 10px 10px 0; padding:0;}
 .container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
 .carousel-inner{border-radius:0 10px 10px 0;}
 .carousel-caption{text-align:left; left:5%;}
