--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,30 @@
     color: #78746f;
     font-weight: 600;
 }
+
+@media (max-width: 798px) {
+    .navbar {
+        padding: 0;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+
+    .navbar-nav .dropdown-menu {
+        border-top: 1px solid #d5d1cc;
+        border-bottom: 0;
+        border-left: 0;
+        border-right: 0;
+        border-radius: 0;
+    }
+
+    .navbar-light .navbar-brand {
+        padding-left: 1em;
+    }
+
+    .navbar-light .navbar-toggler {
+        margin-right: 1em;
+    }
+}
