--- a/css/styles.css
+++ b/css/styles.css
@@ -28,29 +28,35 @@
     font-weight: 600;
 }
 
-@media (max-width: 798px) {
-    .navbar {
-        padding: 0;
-    }
+/*Dashboard*/
 
-    .navbar-light .navbar-nav .nav-link {
-        padding-left: 1em;
-        padding-right: 1em;
-    }
+.card-body-icon {
+    position: absolute;
+    z-index: 0;
+    top: -25px;
+    right: -25px;
+    font-size: 4.5rem;
+    -webkit-transform: rotate(15deg);
+    -ms-transform: rotate(15deg);
+    transform: rotate(15deg);
+}
 
-    .navbar-nav .dropdown-menu {
-        border-top: 1px solid #d5d1cc;
-        border-bottom: 0;
-        border-left: 0;
-        border-right: 0;
-        border-radius: 0;
-    }
+.smaller {
+    font-size: 0.7rem;
+}
 
-    .navbar-light .navbar-brand {
-        padding-left: 1em;
-    }
+.o-hidden {
+    overflow: hidden !important;
+}
 
-    .navbar-light .navbar-toggler {
-        margin-right: 1em;
-    }
+.z-0 {
+    z-index: 0;
+}
+
+.z-1 {
+    z-index: 1;
+}
+
+.bg-wakas {
+    background-color: #E8554E;
 }
