--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,60 @@
     font-family: 'Didact Gothic', sans-serif;
 }
 
+.form-control,input,button {
+    font-family: 'Didact Gothic', sans-serif;
+    font-size: 14px;
+}
+
+label,p,th,td {
+    font-size: 14px;
+}
+
+/* Clases */
+
+.card-header{
+    background-color: #EF4A43;
+    border-bottom-color: #d64e47;
+    color: white;
+}
+
+.card-block{
+    padding: 0px 15px;
+}
+
+.btn.btn-outline-primary{
+    border-color: #EF4A43;
+    color: #EF4A43;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #EF4A43;
+    border-color: #EF4A43;
+}
+
+.btn-outline-primary:focus, .btn-outline-primary.focus {
+    -webkit-box-shadow: 0 0 0 2px #EF4A43;
+    box-shadow: 0 0 0 2px #EF4A43;
+}
+
+.btn-outline-primary.disabled, .btn-outline-primary:disabled {
+    background-color: #EF4A43;
+    border-color: #EF4A43;
+}
+
+.btn-outline-primary:active, .btn-outline-primary.active,
+.show > .btn-outline-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #EF4A43;
+    border-color: #EF4A43;
+    background-image: none;
+}
+
+a{
+    color: black;
+}
+
 /*NavBar*/
 
 .navbar {
@@ -28,3 +82,18 @@
     color: #78746f;
     font-weight: 600;
 }
+
+/* Spacers */
+
+.spacer5 { height: 5px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer10 { height: 10px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer15 { height: 15px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer20 { height: 20px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer25 { height: 25px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer30 { height: 30px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer35 { height: 35px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer40 { height: 40px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer45 { height: 45px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer50 { height: 50px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer100 { height: 100px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
+.spacer200 { height: 200px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; }
